6rd challenge: added Sort's interface and generic merge sort